# linbpq

./: .gitattributes  .gitignore  BPQRemotePTT.cfg  CMakeLists.txt  ChatUsers.txt  RTKnown.txt  TODO.md  chatconfig.cfg  config.ini
CommonSource/: HTTPcode.c
cmake/: Doxyfile.in  ardop.service.in
cmake/Modules/: FindLibConfig.cmake  FindMiniUPNPC.cmake  FindPCAP.cmake  FindThreads.cmake  Version.cmake
doc/doxygen/: doxyExtRTF.cfg  doxyHeader.tex  doxyStyleRTF.cfg
include/: CHeaders.h  CMakeLists.txt  Versions.h.in  asmstrucs.h  bpq32.h  bpqchat.h  bpqmail.h  compatbits.h  configstructs.h  httpconnectioninfo.h  rigcontrol.h  telnetserver.h  templatedefs.c  tncinfo.h
src/: AEAPactor.c  AGWAPI.c  AGWMoncode.c  AISCommon.c  APRSCode.c  APRSStdPages.c  ARDOP.c  BBSHTMLConfig.c  BBSUtilities.c  BPQINP3.c  BPQNRR.c  BPQtoAGW.c  CMSAuth.c  CMakeLists.txt  ChatHTMLConfig.c  Cmd.c  CommonCode.c  DRATS.c  Events.c  FBBRoutines.c  FLDigi.c  FreeDATA.c  HALDriver.c  HFCommon.c  HSMODEM.c  HTMLCommonCode.c  HTTPcode.c  HanksRT.c  Housekeeping.c  IPCode.c  KAMPactor.c  KISSHF.c  L2Code.c  L3Code.c  L4Code.c  LinBPQ.c  MBLRoutines.c  MULTIPSK.c  MailCommands.c  MailDataDefs.c  (+32 more)
unused_files/: BPQChat.rc  BPQMail.c  BPQMail.rc  BPQMail.vcproj  BPQMailConfig.c  BPQMailrc.h  BPQTermMDI.c  Bpq32.c  BpqTermMDI.h  CBPQ32.vcproj  CBPQ32.vcxproj.filters  ChatUtilities.c  ChatUtils.c  DOSAPI.c  GetVersion.h  KernelScript1.rc  MailNode.vcproj  MailNode.vcxproj  Makefile  PortMapper.c  UIARQ.c  V4.c  Versions.h  WinRPRHelper.c  asmDOSAPI.asm  bpqchat.c  bpqether.c  bpqvkiss.c
utils/XAprs/: Makefile
